# aoc2020

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  day.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp  launcher.cpp  old_launcher.cpp  registry.h
lib/: CMakeLists.txt
lib/fmt/: chrono.h  color.h  compile.h  core.h  format-inl.h  format.cc  format.h  os.cc  os.h  ranges.h
